# ZeroChain

./: .gitignore  Cargo.toml  LICENSE  README.md  Readme for runnning the proof.md
circuits/membership/: Cargo.toml
circuits/membership/src/: chip.rs  circuit.rs  lib.rs  poseidon_chip.rs
circuits/membership/tests/: test_membership.rs
circuits/origin/: Cargo.toml
circuits/origin/src/: accumulator.rs  lib.rs  step_circuit.rs
circuits/origin/tests/: test_folding.rs
circuits/transfer/: Cargo.toml
circuits/transfer/src/: constraints.rs  lib.rs  poseidon.rs  witness.rs
circuits/transfer/tests/: generate_test_vector.rs  test_vectors.rs
circuits/transfer/tests/fixtures/: poseidon_vectors.json  test_vector_001.json  transfer_valid_1in_1out.json
cli/: Cargo.toml
cli/src/: commands.rs  main.rs  rpc.rs  wallet.rs
crypto/: Cargo.toml
crypto/src/: commitment.rs  lib.rs  merkle.rs  nullifier.rs  pedersen.rs  poseidon.rs
crypto/tests/: poseidon_parity.rs
e2e-demo/: demo.js
keys/: transfer.pk  transfer.vk
node/: Cargo.toml
pallets/proof-verifier/: Cargo.toml
pallets/proof-verifier/src/: lib.rs  mock.rs  tests.rs
pallets/shielded-assets/: Cargo.toml
pallets/shielded-assets/src/: lib.rs  mock.rs  tests.rs
pallets/zk-validator/: Cargo.toml
pallets/zk-validator/src/: lib.rs  mock.rs  tests.rs
primitives/zk-types/: Cargo.toml
primitives/zk-types/src/: lib.rs
proof_archive/20260330_202613/: .gitignore  INDEX.txt  SUMMARY.md  metadata.json  transfer.vk
prover/: Cargo.toml
prover/src/: groth16_prover.rs  main.rs  origin_prover.rs  serialization.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
runtime/src/configs/: mod.rs
scripts/: generate_proof.sh  test_all.sh
scripts/proof_archive/20260401_040501/: metadata.json  transfer.vk
