[package]
name = "zc-crypto"
version = "0.1.0"
edition = "2021"
description = "Cryptographic primitives for Zero Chain - Poseidon hash, Pedersen commitments, nullifiers"
license = "BUSL-1.1"

[features]
default = ["std"]
std = [
    "ark-ff/std",
    "ark-bn254/std",
    "ark-ec/std",
    "ark-serialize/std",
    "ark-std/std",
    "ark-crypto-primitives/std",
    "hex/std",
    "zeroize/std",
]

[dependencies]
ark-ff = { workspace = true }
ark-bn254 = { workspace = true }
ark-ec = { workspace = true }
ark-serialize = { workspace = true }
ark-std = { workspace = true }
ark-crypto-primitives = { workspace = true }
hex = { workspace = true }
zeroize = { workspace = true }
subtle = { workspace = true }
zk-types = { workspace = true }

[dev-dependencies]
rand = { workspace = true }