[package]
name = "zc-crypto"
version = "0.1.0"
edition = "2021"
description = "Zero Chain Cryptographic Primitives"

[dependencies]
# Hashing
blake2 = "0.10"
sha2 = "0.10"

# Field arithmetic (for Poseidon)
ark-ff = { version = "0.4", default-features = false }
ark-bn254 = { version = "0.4", default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
hex = "0.4"

# Security
zeroize = { version = "1.7", features = ["derive"] }
subtle = "2.5"

# Random
rand = { version = "0.8", features = ["std", "std_rng"] }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"

[features]
default = ["std"]
std = ["serde", "serde_json", "ark-ff/std", "ark-bn254/std"]