[package]
name = "zero-chain-prover"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "prover"
path = "src/main.rs"

[dependencies]
# Circuits
transfer-circuit = { path = "../circuits/transfer" }
crypto = { path = "../crypto" }
zk-types = { path = "../primitives/zk-types" }

# Arkworks
ark-bn254 = "0.5.0"
ark-groth16 = "0.5.0"
ark-serialize = "0.5.0"
ark-std = "0.5.0"

# CLI
clap = { version = "4.0", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"

# Async (for future gRPC service)
tokio = { version = "1", features = ["full"], optional = true }

[features]
default = []
service = ["tokio"]