[package]
name = "circuits-membership"
version = "0.1.0"
edition = "2021"
description = "Halo2 ValidatorMembershipCircuit for Zero Chain"

[dependencies]
# Halo2
halo2_proofs = "0.3"
halo2curves = "0.6"

# Field arithmetic
ff = "0.13"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Local
zc-crypto={workspace=true}
zk-types={workspace=true}

[dev-dependencies]
rand = "0.8"
hex = "0.4"