[package]
name = "membership-circuit"
version = "0.1.0"
edition = "2021"
description = "Validator membership circuit for Zero Chain"

[dependencies]
# Halo2
halo2_proofs = "0.3"
halo2curves = "0.6"

# Field arithmetic
ff = "0.13"

# Serialization
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

# Random (for tests)
rand = "0.8"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"

[features]
default = ["std"]
std = ["serde", "serde_json"]