[package]
name = "origin-circuit"
version = "0.1.0"
edition = "2021"

[dependencies]
# Nova (latest version)
nova-snark = "0.68.0"

# Arkworks (matching your versions)
ark-ff = "0.5.0"
ark-bn254 = "0.5"
ark-std = "0.5.0"
ark-serialize = "0.5.0"
ark-ec = "0.5.0"

# Your workspace crates
zc-crypto = { workspace = true }
zk-types = { workspace = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"

[dev-dependencies]
criterion = "0.8.2"

[features]
default = []
std = []