[package]
name = "origin-circuit"
version = "0.1.0"
edition = "2021"

[dependencies]
# Arkworks (matching workspace versions 0.4.x)
ark-ff = { workspace = true }
ark-bn254 = { workspace = true }
ark-std = { workspace = true }
ark-serialize = { workspace = true }
ark-ec = { workspace = true }

# Your workspace crates
zc-crypto = { workspace = true }
zk-types = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
rand = { workspace = true }

[features]
default = ["std"]
std = [
    "ark-ff/std",
    "ark-bn254/std",
    "ark-std/std",
    "ark-serialize/std",
    "ark-ec/std",
    "zc-crypto/std",
    "zk-types/std",
]