[package]
name = "transfer-circuit"
version = "0.1.0"
edition = "2021"
description = "Groth16 shielded transfer circuit for Zero Chain"
license = "BUSL-1.1"

[dependencies]
# Arkworks for Groth16
ark-ff = { workspace = true }
ark-ec = { workspace = true }
ark-bn254 = { workspace = true }
ark-groth16 = { workspace = true }
ark-r1cs-std = { workspace = true }
ark-relations = { workspace = true }
ark-serialize = { workspace = true }
ark-std = { workspace = true }

# Local crates
zc-crypto = { workspace = true }
zk-types = { workspace = true }

# Utilities
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
rand = { workspace = true }

[features]
default = ["std"]
std = [
    "ark-ff/std",
    "ark-ec/std",
    "ark-bn254/std",
    "ark-groth16/std",
    "ark-r1cs-std/std",
    "ark-relations/std",
    "ark-serialize/std",
    "ark-std/std",
]
